# Steps

./: .gitignore  DIAGRAM_FEATURE_SUMMARY.md  README.md  StepsIDE.spec  build_interpreter.sh  build_mac_intel.sh  build_release.bat  build_release.sh  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  steps.spec  terminal  test_diagram_feature.py  todo.md
SCAT/: API_INTEGRATION_GUIDE.md  IDE_INTEGRATION_GUIDE.md  README.md  launcher.py  main.py  requirements.txt  scat_gui.py  test_samples.py
SCAT/core/: __init__.py  analyzer.py  models.py  registry.py  utils.py
SCAT/docs/: DOCUMENTATION_STATUS.md  REFACTORING_SUMMARY.md  SCAT_GUI_SUMMARY.md  SCAT_TROUBLESHOOTING.md  SYNTAX_HIGHLIGHTING.md
SCAT/languages/: __init__.py  base.py  basic_analyzer.py  lua_analyzer.py  plain_analyzer.py  pseudocode_analyzer.py  python_analyzer.py  ruby_analyzer.py  steps_analyzer.py
SCAT/legacy/: CODE_ANALYZER_FINAL_SUMMARY.md  CODE_ANALYZER_PROFESSIONAL_README.md  code_analyzer_app.py  launch_analyzer.py  test_formal_analyzer.py
SCAT/tests/: __init__.py  test_gui.py  test_modular_analyzer.py
SCAT/ui/: __init__.py  main_window.py  themes.py
dev-docs/: AI_AGENT_PROMPT.md  ARCHITECTURE.md  AST_SPECIFICATION.md  DEBUGGER_IMPLEMENTATION_PLAN.md  DEVELOPMENT_GUIDE.md  ERROR_MESSAGES.md  HOW_BUILT-INS_WORK.md  LANGUAGE_SPEC.md  LEXER_SPEC.md  PARSER-GAPS-ANALYSIS.md  PARSER_SPEC.md  PROJECT_OVERVIEW.md  TESTING_STRATEGY.md  tasks-checklist.md
dev-docs/change-logs/: CHANGELOG-Master.md  CHANGELOG-Phase1.md  CHANGELOG-Phase2.md  CHANGELOG-Phase3.md  CHANGELOG-Phase4.md  CHANGELOG-Phase5.md  CHANGELOG-Phase6.md
dev-docs/ide/: DIAGRAM_FEATURE.md  IDE_IMPLEMENTATION.md  IDE_SPEC.md
dev-docs/repl/: REPL_IMPLEMENTATION.md  REPL_SPEC.md
dev-docs/syntax-highlighting/: SYNTAX-HIGHLIGHTING-IMPLEMENTATION.md  SYNTAX-HIGHLIGHTING-README.md  SYNTAX-HIGHLIGHTING-TODO.md  SYNTAX-HIGHLIGHTING-TROUBLESHOOTING.md  SYNTAX-HIGHLIGHTING.md  test_minimal_query.py  test_syntax_highlighting.py
docs/: DECIMAL_NUMBER_FORMATTING.md.resolved  LANGUAGE-REFERENCE.md  PARSER-GAPS-ANALYSIS.md  QUICK-REFERENCE.md  STDLIB.md  TESTING-GUIDE.md  TUTORIAL.md  USER-GUIDE.md
images/: Steps.icns
marketing-website/: README.md  examples.html  features.html  getting-started.html  index.html
marketing-website/css/: styles.css
marketing-website/docs/: LANGUAGE-REFERENCE.md  (+5 more)
projects/: scratchpad.building  test_input.building  test_syntax.step
tests/: conftest.py
tree-sitter-steps/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  setup.py
tree-sitter-steps/bindings/node/: binding.cc  index.js
tree-sitter-steps/bindings/python/: binding.c
tree-sitter-steps/bindings/python/tree_sitter_steps/: __init__.py
tree-sitter-steps/bindings/rust/: lib.rs
tree-sitter-steps/queries/: highlights.scm  highlights_minimal.scm
tree-sitter-steps/src/: grammar.json  node-types.json  parser.c
(+306 files in other folders)
