[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steps-lang"
version = "0.1.0"
description = "An educational programming language that makes program structure visible"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chuck", email = "chuck@example.com" },
]
keywords = [
    "programming-language",
    "education",
    "teaching",
    "interpreter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
]
ide = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.scripts]
steps = "steps.main:main"
steps-ide = "steps_ide.main:main"

[project.urls]
Homepage = "https://github.com/username/steps-lang"
Documentation = "https://github.com/username/steps-lang#readme"
Repository = "https://github.com/username/steps-lang"
Issues = "https://github.com/username/steps-lang/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/steps", "src/steps_ide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/steps"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
